--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,4 +31,9 @@ jobs:
           make
 
       - name: unit-tests
-        run: ctest
+        run: |
+          pwd
+          ls -la
+          cd build
+          ls -la
+          ctest
