--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,8 +22,18 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
+      - name: get build wrapper
+        run: |
+          ct /tmp
+          wget https://sonarcloud.io/static/cpp/build-wrapper-linux-x86.zip
+          unzip build-wrapper-linux-x86.zip
+          export PATH="/tmp/build-wrapper-linux-x86:$PATH"
+          printenv
+
+
+
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: build
         run: |
           mkdir build
           cd build
