--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,5 +3,6 @@ sonar.projectKey=soerenPeters_cpp_start
 sonar.projectName=CppStart
 sonar.projectVersion=1.0
 sonar.sources=.
+sonar.cfamily.build-wrapper-output=build/bw-output
 sonar.sourceEncoding=UTF-8
 sonar.host.url=https://sonarcloud.io
