Add test artifact job.

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -45,11 +45,15 @@ jobs:
           cd build
           ctest
 
-      - name: Archive code coverage results
-          uses: actions/upload-artifact@v2
-          with:
-            name: build wrapper output
-            path: build_wrapper_output_directory
+      - shell: bash
+        run: |
+          expr 3 + 7 > math-homework.txt
+      - name: Upload math result for job 1
+        uses: actions/upload-artifact@v2
+        with:
+          name: homework
+          path: math-homework.txt
+
 
   sonarcloud:
     runs-on: ubuntu-latest
