--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -55,6 +55,12 @@ jobs:
         with:
           # Disabling shallow clone is recommended for improving relevancy of reporting
           fetch-depth: 0
+
+      - name: Download build wrapper result
+          uses: actions/download-artifact@v2
+          with:
+            name: build_wrapper_output_directory
+
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
         env:
