--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -60,10 +60,12 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: build_wrapper_output_directory
+          path: build_wrapper_output_directory
 
       - name: debug
         run: |
           ls -la
+          ls -la build_wrapper_output_directory
 
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
