--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -62,14 +62,17 @@ jobs:
           name: build_wrapper_output_directory
           path: build_wrapper_output_directory
 
+      - name: get sonar scanner
+        run: |
+          cd /tmp
+          wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.5.0.2216-linux.zip
+          unzip sonar-scanner-cli-4.5.0.2216-linux.zip
+
+
       - name: debug
         run: |
           ls -la
           ls -la build_wrapper_output_directory
           pwd
+          /tmp/sonar-scanner-4.5.0.2216-linux/bin/sonar-scanner
 
-      - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
