--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -76,4 +76,7 @@ jobs:
           ls -la build_wrapper_output_directory
           pwd
           /tmp/sonar-scanner-4.5.0.2216-linux/bin/sonar-scanner
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
