--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -62,7 +62,8 @@ jobs:
           mkdir coverage
           pwd
           ls -la
-          gcovr -r $GITHUB_WORKSPACE -k "build" -f "src" --print-summary --html coverage/coverage.html --html-details --xml coverage/coverage.xml
+          echo $GITHUB_WORKSPACE
+          gcovr -r $GITHUB_WORKSPACE -k "build" -f "src" --print-summary --html $GITHUB_WORKSPACE/coverage/coverage.html --html-details --xml $GITHUB_WORKSPACE/coverage/coverage.xml
 
       - name: Upload gcov
         uses: actions/upload-artifact@v2
