--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -63,8 +63,8 @@ jobs:
           pwd
           ls -la
           echo $GITHUB_WORKSPACE
-          gcovr -r $GITHUB_WORKSPACE -k "build" -f "src" --print-summary --html --html-details -o coverage/coverage.html
-          ls -la
+          gcovr -r $GITHUB_WORKSPACE -k "build" -f "src" --print-summary --html --html-details -o coverage/coverage.html --xml coverage/coverage.xml
+          ls -la coverage/
       # gcovr -r $GITHUB_WORKSPACE -k "build" -f "src" --print-summary --html $GITHUB_WORKSPACE/coverage/coverage.html --html-details --xml $GITHUB_WORKSPACE/coverage/coverage.xml
 
       - name: Upload gcov
