--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -63,19 +63,18 @@ jobs:
           pwd
           ls -la
           echo $GITHUB_WORKSPACE
-          gcovr -r $GITHUB_WORKSPACE -k "build" -f "src" --print-summary --html --html-details -o coverage/coverage.html --xml -o coverage/coverage.xml
-          ls -la coverage/
+          gcovr -r $GITHUB_WORKSPACE -k "build" -f "src" --print-summary --sonarqube gcov.xml
       # gcovr -r $GITHUB_WORKSPACE -k "build" -f "src" --print-summary --html $GITHUB_WORKSPACE/coverage/coverage.html --html-details --xml $GITHUB_WORKSPACE/coverage/coverage.xml
 
       - name: Upload gcov
         uses: actions/upload-artifact@v2
         with:
           name: gcov
-          path: coverage
+          path: gcov.xml
 
   sonarcloud:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build,gcov
     steps:
       - uses: actions/checkout@v2
         with:
@@ -87,6 +86,12 @@ jobs:
         with:
           name: build_wrapper_output_directory
           path: build/build_wrapper_output_directory
+
+      - name: Download gcov result
+        uses: actions/download-artifact@v2
+        with:
+          name: gcov
+          path: gcov.xml
 
       - name: get sonar scanner
         run: |
