--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -74,7 +74,7 @@ jobs:
 
   sonarcloud:
     runs-on: ubuntu-latest
-    needs: build,gcov
+    needs: [build, gcov]
     steps:
       - uses: actions/checkout@v2
         with:
