--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -63,7 +63,7 @@ jobs:
           pwd
           ls -la
           echo $GITHUB_WORKSPACE
-          gcovr -r $GITHUB_WORKSPACE -k "build" -f "src" --print-summary --sonarqube gcov.xml
+          gcovr -r $GITHUB_WORKSPACE -k "build" -f "src" --print-summary --xml gcov.xml
       # gcovr -r $GITHUB_WORKSPACE -k "build" -f "src" --print-summary --html $GITHUB_WORKSPACE/coverage/coverage.html --html-details --xml $GITHUB_WORKSPACE/coverage/coverage.xml
 
       - name: Upload gcov
