--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,4 +6,4 @@ sonar.sources=src/
 sonar.cfamily.build-wrapper-output=build/build_wrapper_output_directory
 sonar.sourceEncoding=UTF-8
 sonar.host.url=https://sonarcloud.io
-sonar.cfamily.gcov.reportsPath=gcov/coverage.xml
+sonar.coverageReportPaths=gcov/sonarqube.xml
