Disable cache and set number of threads to 1 for the sonar scanner.

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,3 +7,5 @@ sonar.cfamily.build-wrapper-output=build/build_wrapper_output_directory
 sonar.sourceEncoding=UTF-8
 sonar.host.url=https://sonarcloud.io
 sonar.coverageReportPaths=gcov/sonarqube.xml
+sonar.cfamily.cache.enabled=false
+sonar.cfamily.threads=1
