Split CI files.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,15 @@
-name: CI
+name: main
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
-  build:
+  build_wrapper_linux:
     runs-on: ubuntu-latest
 
     steps:
@@ -33,25 +39,7 @@ jobs:
           name: build_wrapper_output_directory
           path: build/build_wrapper_output_directory
 
-
-  build_macos:
-    runs-on: macos-11.0
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: build
-        run: |
-          mkdir build
-          cd build
-          cmake ..
-          make
-
-      - name: unit-tests
-        run: |
-          cd build
-          ctest
-###########################################################################
+  ###########################################################################
   gcov:
     runs-on: ubuntu-20.04
 
