--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,3 +39,21 @@ jobs:
         run: |
           cd build
           ctest
+
+  build_windows:
+    runs-on: windows-2019
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: build
+        run: |
+          mkdir build
+          cd build
+          cmake ..
+          make
+
+      - name: unit-tests
+        run: |
+          cd build
+          ctest
