--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,8 @@ jobs:
           mkdir build
           cd build
           cmake ..
-          make
+          ls -la
+          cmake --build build --config Debug
 
       - name: unit-tests
         run: |
