Add compiler flags, compiler definitions and link flags.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,13 @@ project(CppStart CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+set(COMPILER_FLAGS_CXX)
+set(COMPILER_FLAGS_CXX_DEBUG)
+set(COMPILER_FLAGS_CXX_RELEASE)
+set(COMPILER_DEFINITION)
+set(LINK_OPTIONS)
+
 include(CMake/cpp_starter.cmake)
 
-list(APPEND COMPILER_FLAG -Wall)
 
 add_subdirectory(src)
