--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -1,4 +1,4 @@
-name: main
+name: analyze
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build_wrapper_linux:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
       - uses: actions/checkout@v2
