--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -1,12 +1,6 @@
 name: analyze
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+on: [push, pull_request]
 
 jobs:
   gcov:
