Rename the test files to "test_*" and exclude them from gcovr analysis.

--- a/src/info/CMakeLists.txt
+++ b/src/info/CMakeLists.txt
@@ -9,7 +9,7 @@ set(SOURCE_FILES
         ${buildInfoPath}/${buildInfoFile})
 
 set(TEST_FILES
-        gitTest.cpp)
+        test_git.cpp)
 
 set(PUBLIC_LINK)
 
