--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,3 +9,4 @@ sonar.host.url=https://sonarcloud.io
 sonar.coverageReportPaths=gcov/sonarqube.xml
 sonar.cfamily.cache.enabled=false
 sonar.cfamily.threads=1
+sonar.coverage.exclusions=.*test_.*
