Move Adder library to a folder.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,5 +14,5 @@ set(LINK_OPTIONS)
 include(CMake/cpp_starter.cmake)
 
 
-add_subdirectory(src)
+add_subdirectory(src/adder)
 add_subdirectory(src/info)
