--- a/.github/workflows/analyse.yml
+++ b/.github/workflows/analyse.yml
@@ -26,7 +26,7 @@ jobs:
       - name: gcov
         run: |
           mkdir gcov
-          gcovr "build" -r . -k -f "src" -f "build/projectInfo" --print-summary --html gcov/coverage.html --html-details --xml gcov/coverage.xml --sonarqube gcov/sonarqube.xml
+          gcovr "build" -r . -k -f "src" -f "build/buildMetaPath" --print-summary --html gcov/coverage.html --html-details --xml gcov/coverage.xml --sonarqube gcov/sonarqube.xml
 
       - name: Upload gcov
         uses: actions/upload-artifact@v2
