--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.organization=soerenpeters
 sonar.projectKey=soerenPeters_cpp_start
 sonar.projectName=CppStart
 sonar.projectVersion=1.0
-sonar.sources=src,build/projectInfo
+sonar.sources=src,build/buildMetaPath
 sonar.cfamily.build-wrapper-output=build/build_wrapper_output_directory
 sonar.sourceEncoding=UTF-8
 sonar.host.url=https://sonarcloud.io
