--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,18 +9,14 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: configure
+        run: mkdir build && cd build && cmake .. -DBUILD_WARNINGS_AS_ERRORS=ON
 
       - name: build
-        run: |
-          mkdir build
-          cd build
-          cmake ..
-          make
+        run: cmake --build build --config Debug
 
       - name: unit-tests
-        run: |
-          cd build
-          ctest
+        run: cd build && ctest
 
   build_macos:
     runs-on: macos-11.0
@@ -28,17 +24,14 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: configure
+        run: mkdir build && cd build && cmake .. -DBUILD_WARNINGS_AS_ERRORS=ON
+
       - name: build
-        run: |
-          mkdir build
-          cd build
-          cmake ..
-          make
+        run: cmake --build build --config Debug
 
       - name: unit-tests
-        run: |
-          cd build
-          ctest
+        run: cd build && ctest
 
   build_windows:
     runs-on: windows-2019
@@ -47,7 +40,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: configure
-        run: mkdir build && cd build && cmake ..
+        run: mkdir build && cd build && cmake .. -DBUILD_WARNINGS_AS_ERRORS=ON
       - name: build
         run: cmake --build build --config Debug
       - name: test
