Add OpenMP usage example.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,4 +22,5 @@ include(CMake/cpp_starter.cmake)
 
 add_subdirectory(src/adder)
 add_subdirectory(src/meta)
+add_subdirectory(src/openmp_example)
 
