--- a/.github/workflows/advanced_build.yml
+++ b/.github/workflows/advanced_build.yml
@@ -10,8 +10,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: configure
-        run: mkdir build && cd build && \
-          cmake .. \
+        run: mkdir build && cd build && cmake .. \
           -DBUILD_WARNINGS_AS_ERRORS=ON \
           -DBUILD_USE_OPENMP=ON
 
