--- a/.github/workflows/advanced_build.yml
+++ b/.github/workflows/advanced_build.yml
@@ -10,8 +10,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: configure
-        run: mkdir build && cd build && cmake .. \
-          -DBUILD_WARNINGS_AS_ERRORS=ON \
+        run: >
+          mkdir build && cd build && cmake ..
+          -DBUILD_WARNINGS_AS_ERRORS=ON
           -DBUILD_USE_OPENMP=ON
 
       - name: build
