Fix the yml skript FINALLY.

--- a/.github/workflows/advanced_build.yml
+++ b/.github/workflows/advanced_build.yml
@@ -29,10 +29,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: configure
-        run: mkdir build && cd build && \
-          cmake .. \
-          -DBUILD_WARNINGS_AS_ERRORS=ON \
-          -DBUILD_SHARED_LIBS=OFF \
+        run: >
+          mkdir build && cd build && cmake ..
+          -DBUILD_WARNINGS_AS_ERRORS=ON
+          -DBUILD_SHARED_LIBS=OFF
           -DBUILD_USE_OPENMP=ON
 
       - name: build
@@ -50,9 +50,9 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: configure
-        run: mkdir build && cd build && \
-          cmake .. \
-          -DBUILD_WARNINGS_AS_ERRORS=ON \
+        run: >
+          mkdir build && cd build && cmake ..
+          -DBUILD_WARNINGS_AS_ERRORS=ON
           -DBUILD_USE_OPENMP=ON
 
       - name: build
@@ -68,10 +68,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: configure
-        run: mkdir build && cd build && \
-          cmake .. \
-          -DBUILD_WARNINGS_AS_ERRORS=ON \
-          -DBUILD_SHARED_LIBS=OFF \
+        run: >
+          mkdir build && cd build && cmake ..
+          -DBUILD_WARNINGS_AS_ERRORS=ON
+          -DBUILD_SHARED_LIBS=OFF
           -DBUILD_USE_OPENMP=ON
 
       - name: build
