Small clean ups. Enable openmp in the gcov build.

--- a/.github/workflows/analyse.yml
+++ b/.github/workflows/analyse.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake .. -DBUILD_COVERAGE=ON
+          cmake .. -DBUILD_COVERAGE=ON -DBUILD_USE_OPENMP=ON
           make
           ctest
 
