Add mpi example.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,4 +23,4 @@ include(CMake/cpp_starter.cmake)
 add_subdirectory(src/adder)
 add_subdirectory(src/meta)
 add_subdirectory(src/openmp_example)
-
+add_subdirectory(src/mpi_example)
