Set boost example to OFF per default. Enable the boost example in the gcov build.

--- a/.github/workflows/analyse.yml
+++ b/.github/workflows/analyse.yml
@@ -11,15 +11,16 @@ jobs:
 
       - name: Install gcov
         run: |
-          sudo apt-get update -y
-          sudo apt-get install -y gcovr
+          apt-get update -y
+          apt-get install -y gcovr
           gcovr --version
+          apt-get install -y libboost-filesystem1.71-dev
 
       - name: build
         run: |
           mkdir build
           cd build
-          cmake .. -DBUILD_COVERAGE=ON -DBUILD_USE_OPENMP=ON
+          cmake .. -DBUILD_COVERAGE=ON -DBUILD_USE_OPENMP=ON BUILD_BOOST_EXAMPLE=ON
           make
           ctest
 
