--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.14)
 
 project(CppStart CXX)
 
-option(BUILD_BOOST_EXAMPLE "Build the boost example." ON)
+option(BUILD_BOOST_EXAMPLE "Build the boost example." OFF)
 
 if(BUILD_BOOST_EXAMPLE) # As boost is using deprecated C++ features (like auto_ptr) we must stay on C++14.
     set(CMAKE_CXX_STANDARD 14)
