--- a/.github/workflows/analyse.yml
+++ b/.github/workflows/analyse.yml
@@ -86,6 +86,34 @@ jobs:
               cppcheck.xml
 
 ###########################################################################
+  lizard:
+    runs-on: ubuntu-20.04
+
+    container:
+      image: bssoeren/cpp_build_starter:latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: install lizard
+        run: |
+          cd /tmp
+          git clone https://github.com/terryyin/lizard.git && cd lizard
+          python3 setup.py install
+          lizard --version
+
+
+      - name: run lizard
+        run: |
+          lizard -l cpp src/ > lizard.txt
+
+      - name: upload lizard
+        uses: actions/upload-artifact@v2
+        with:
+          name: lizard
+          path: |
+            lizard.txt
+
+###########################################################################
   sonarcloud:
     runs-on: ubuntu-20.04
     needs: [gcov]
